# BavariaElectionSystem2023

./: .gitignore  README.md  docker-compose.yml  package-lock.json
server/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
server/src/: main.py
server/src/database/: database.py  sainte_lague_iterative.py  seat_alloc_EStimme.py  seat_alloc_ZStimme.py  seat_alloc_partei.py  someScript.py  sql_zstimme  test_algo.py  vote_counts.py  Überhangs_ausgleich_mandaten.py
server/src/database/migrations/: env.py
server/src/database/migrations/versions/: 10847ea8454d_test.py  3d7d5cd18aa5_add_abgeordnete.py  7d5278403366_test.py  8e5d52cbaa5e_wahlergebnisse2018.py  93fd3af62192_test.py  99facd099c84_test.py  aaa593e283b9_added_student_model.py  c94f1583126d_wahlergebnisse2018.py  d0351cc56b45_test.py  ecdb21f96960_added_election_models.py  f8c8a33dedfe_add_ueberhangsausgleich.py
server/src/database/models/: models.py
server/src/database/scripts/: add_wahlkreise_stimmkreise.sql  create_candidates.py  generate_votes.py
server/src/database/scripts/analysis/: find_angeordnete.py  views_code.sql  votes_pro_party_pro_wahlkreis.py  Überhangs_ausgleich_mandaten.py
server/src/database/scripts/csv/: LTW2023_BEWERBER_UND_ABGEORDNETE_WkrNr_901.xls  gemeinde_.csv  (+4 more)
server/src/routers/other_analysis/: other_analysis.py
server/src/routers/vergleich/: vergleich_router.py
server/src/routers/voting/: utils.py  voting_router.py
server/src/routers/wahlkreis/: wahlkreis_router.py
server/src/stimmabgabe/: generate_tokens.py  stimmkreise.py  token.csv  vote.py
(+76 files in other folders)
