[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Dhia Bouassida <dhia.bouassida@tngtech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
alembic = "^1.12.1"
watchdog = "^3.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
