[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Dhia Bouassida"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
alembic = "^1.12.1"
watchdog = "^3.0.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.1.3"
xlrd = "^2.0.1"
black = "^23.11.0"
matplotlib = "^3.8.2"
sqlalchemy = "^2.0.25"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
